# OptiWeave

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: OptiWeaveConfig.cmake.in
docs/: architecture.md
examples/: CMakeLists.txt
examples/basic_transformation/: example.cpp
include/optiweave/core/: ast_visitor.hpp
scripts/: build.sh  format.sh  test.sh
src/: main.cpp
src/Matchers/: operator_matchers.cpp  type_matchers.cpp
src/analysis/: operator_detector.cpp  template_analyzer.cpp
src/core/: ast_visitor.cpp
src/utils/: diagnostic_utils.cpp  source_utils.cpp
templates/: builtins.hpp  prelude.hpp
tests/: CMakeLists.txt  test_input.cpp
tests/integration/: test_array_subscript.cpp
tests/unit/: test_ast_visitor.cpp  test_operator_detection.cpp  test_rewriter.cpp  test_template_handling.cpp
